--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         buildToolsVersion = "28.0.3"
-        minSdkVersion = 16
+        minSdkVersion = 21
         compileSdkVersion = 28
         targetSdkVersion = 28
         supportLibVersion = "28.0.0"
@@ -11,6 +11,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://maven.fabric.io/public"
+        }
+        maven {
+            // Local Maven repo containing AARs with JSC library built for Android
+            url "$rootDir/../node_modules/jsc-android/dist"
+        }
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.4.0")
@@ -22,12 +29,10 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "$rootDir/app/libs" }
         mavenLocal()
         google()
         jcenter()
-        maven {
-            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url "$rootDir/../node_modules/react-native/android"
-        }
+        maven { url "https://jitpack.io" }
     }
 }
