--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nativeTemplate",
-  "version": "0.0.1",
+  "name": "native-template",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -8,6 +8,27 @@
   },
   "dependencies": {
     "react": "16.8.3",
+    "@react-native-community/async-storage": "^1.4.0",
+    "@react-native-community/netinfo": "^3.2.1",
+    "react-native-ble-plx": "^1.0.1",
+    "react-native-calendar-events": "^1.6.3",
+    "react-native-camera": "^2.6.0",
+    "react-native-device-info": "^1.7.0",
+    "react-native-firebase": "5.3.1",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-geocoder": "^0.5.0",
+    "react-native-image-picker": "^0.28.0",
+    "react-native-inappbrowser-reborn": "^2.0.4",
+    "react-native-maps": "^0.24.2",
+    "react-native-sound": "^0.10.9",
+    "react-native-sqlite-storage": "^3.3.2",
+    "react-native-svg": "^9.2.3",
+    "react-native-touch-id": "^4.0.1",
+    "react-native-vector-icons": "^6.4.2",
+    "react-native-video": "^4.3.1",
+    "react-native-view-shot": "^2.5.0",
+    "react-native-webview": "^5.1.0",
+    "jsc-android": "^245459.0.0",
     "react-native": "0.59.9"
   },
   "devDependencies": {
