--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,7 @@
 # Uncomment the next line to define a global platform for your project
 platform :ios, '12.0'
 
-target 'NativeTemplate' do
+target 'nativeTemplate' do
   # Comment the next line if you don't want to use dynamic frameworks
   # use_frameworks!
   
@@ -9,22 +9,22 @@ target 'NativeTemplate' do
   # Pods for nativeTemplate
   # RN pods start
   pod 'React', :path => '../node_modules/react-native', :subspecs => [
-    'Core',
     'ART',
+    'Core',
     'CxxBridge',
     'DevSupport',
-    'RCTText',
-    'RCTNetwork',
-    'RCTWebSocket',
-    'RCTImage',
-    'RCTBlob',
-    'RCTLinkingIOS',
-    'RCTSettings',
-    'RCTVibration',
     'RCTActionSheet',
     'RCTAnimation',
-    'RCTGeolocation',
+    'RCTBlob',
     'RCTCameraRoll'
+    'RCTGeolocation',
+    'RCTImage',
+    'RCTLinkingIOS',
+    'RCTNetwork',
+    'RCTSettings',
+    'RCTText',
+    'RCTVibration',
+    'RCTWebSocket',
   ]
 
   pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
