Fix unneccessary MaterialIcon font

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,7 +142,8 @@ android {
 }
 
 project.ext.vectoricons = [
-    iconFontNames: [ "MaterialIcons.ttf" ]
+    // Intentionally left blank
+    iconFontNames: []
 ]
 
 dependencies {
