--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -170,6 +170,8 @@ dependencies {
     implementation project(":mendixnative-release")
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation "org.webkit:android-jsc:r245459"
 }
 
 // Run this once to be able to run the application with BUCK
