--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,10 +29,18 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url "$rootDir/app/libs" }
         mavenLocal()
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+        maven {
+            url "$rootDir/../node_modules/react-native/android"
+        }
+        maven {
+            url "$rootDir/../node_modules/jsc-android/dist"
+        }
+        maven {
+            url "https://maven.fabric.io/public"
+        }
     }
 }
