--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-native-video": "^4.3.1",
     "react-native-view-shot": "^2.5.0",
     "react-native-webview": "^5.1.0",
-    "jsc-android": "^245459.0.0",
+    "jsc-android": "245459.0.0",
     "react-native": "0.59.9"
   },
   "devDependencies": {
