--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-ble-plx": "^1.0.1",
     "react-native-calendar-events": "^1.6.3",
     "react-native-camera": "^2.6.0",
+    "react-native-code-push": "^5.6.1",
     "react-native-device-info": "^1.7.0",
     "react-native-firebase": "5.3.1",
     "react-native-gesture-handler": "^1.3.0",
