--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.8.3",
     "@react-native-community/async-storage": "^1.4.0",
     "@react-native-community/netinfo": "^3.2.1",
-    "react-native-ble-plx": "^1.0.1",
+    "jsc-android": "245459.0.0",
+    "react": "16.8.3",
+    "react-native": "0.59.9",
+    "react-native-ble-plx": "^1.1.0",
     "react-native-calendar-events": "^1.6.3",
     "react-native-camera": "^2.6.0",
+    "react-native-code-push": "^5.7.0",
     "react-native-device-info": "^1.7.0",
     "react-native-firebase": "5.3.1",
-    "react-native-gesture-handler": "^1.3.0",
     "react-native-geocoder": "^0.5.0",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^0.28.0",
     "react-native-inappbrowser-reborn": "^2.0.4",
     "react-native-maps": "^0.24.2",
@@ -28,9 +31,7 @@
     "react-native-vector-icons": "^6.4.2",
     "react-native-video": "^4.3.1",
     "react-native-view-shot": "^2.5.0",
-    "react-native-webview": "^5.1.0",
-    "jsc-android": "245459.0.0",
-    "react-native": "0.59.9"
+    "react-native-webview": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
