--- a/ios/Podfile
+++ b/ios/Podfile
@@ -66,5 +66,5 @@ target 'nativeTemplate' do
   pod 'RNFirebase', :path => '../node_modules/react-native-firebase/ios'
   pod 'Firebase/Core', '~> 5.15.0'
   pod 'Firebase/Messaging', '~> 5.15.0'
-
+  pod 'CodePush', :path => '../node_modules/react-native-code-push'
 end
