Include default permissions placeholder messages

--- a/ios/nativeTemplate/Info.plist
+++ b/ios/nativeTemplate/Info.plist
@@ -37,8 +37,24 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>This app may need access to your Bluetooth connection</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>This app may need access to your Bluetooth connection</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>This app requires access to the calendar</string>
+	<key>NSCameraUsageDescription</key>
+	<string>The camera can be used to open apps by scanning a QR code.</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Enabling Face ID allows you quick and secure access to your account.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>To use that feature the app needs access to your location.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>To use that feature the app needs access to your location.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>To use that feature the app needs access to your microphone.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To use that feature the app needs access to your photo library.</string>
 	<key>Runtime url</key>
 	<string>$(RUNTIME_URL)</string>
 	<key>UIAppFonts</key>
