--- a/ios/Podfile
+++ b/ios/Podfile
@@ -67,4 +67,6 @@ target 'nativeTemplate' do
   pod 'Firebase/Core', '~> 5.15.0'
   pod 'Firebase/Messaging', '~> 5.15.0'
   pod 'CodePush', :path => '../node_modules/react-native-code-push'
+  pod 'ReactNativeDarkMode', :path => '../node_modules/react-native-dark-mode'
+
 end
