--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-calendar-events": "^1.6.3",
     "react-native-camera": "^2.6.0",
     "react-native-code-push": "^5.7.0",
+    "react-native-dark-mode": "^0.2.0",
     "react-native-device-info": "^1.7.0",
     "react-native-firebase": "5.3.1",
     "react-native-gesture-handler": "^1.3.0",
