--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "react-native-device-info": "^1.7.0",
     "react-native-firebase": "5.3.1",
     "react-native-gesture-handler": "^1.3.0",
-    "react-native-geocoder": "^0.5.0",
-    "react-native-image-picker": "^0.28.0",
+    "react-native-geocoder": "0.5.0",
+    "react-native-image-picker": "0.28.0",
     "react-native-inappbrowser-reborn": "^2.0.4",
-    "react-native-maps": "^0.24.2",
-    "react-native-sound": "^0.10.9",
+    "react-native-maps": "0.24.2",
+    "react-native-sound": "0.10.9",
     "react-native-sqlite-storage": "^3.3.2",
     "react-native-svg": "^9.2.3",
     "react-native-touch-id": "^4.0.1",
