--- a/ios/Podfile
+++ b/ios/Podfile
@@ -63,7 +63,7 @@ target 'nativeTemplate' do
   pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
   
   pod 'RNFirebase', :path => '../node_modules/react-native-firebase/ios'
-  pod 'Firebase/Core'
+  pod 'Firebase/Core', '~> 5.15.0'
   pod 'Firebase/Messaging', '~> 5.15.0'
   pod 'react-native-ble-plx-swift', :podspec => '../node_modules/react-native-ble-plx/react-native-ble-plx-swift.podspec'
 
