--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,18 +39,19 @@ target 'nativeTemplate' do
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
   pod 'RNGestureHandler', :podspec => '../node_modules/react-native-gesture-handler/RNGestureHandler.podspec'
   pod 'react-native-sqlite-storage', :path => '../node_modules/react-native-sqlite-storage'
-  pod 'react-native-calendar-events', :podspec => '../node_modules/react-native-calendar-events/react-native-calendar-events.podspec'
+  pod 'react-native-calendar-events', :path => '../node_modules/react-native-calendar-events'
   pod 'react-native-camera', :path => '../node_modules/react-native-camera', subspecs: [
     'TextDetector',
     'FaceDetectorMLKit'
   ]
-  pod 'react-native-image-picker', :podspec => '../node_modules/react-native-image-picker/react-native-image-picker.podspec'
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
   pod 'TouchID', :path => '../node_modules/react-native-touch-id'
-  pod 'react-native-ble-plx-swift', :podspec => '../node_modules/react-native-ble-plx/react-native-ble-plx-swift.podspec'
+  pod 'react-native-ble-plx', :path => '../node_modules/react-native-ble-plx'
+  pod 'react-native-ble-plx-swift', :path => '../node_modules/react-native-ble-plx'
   pod 'RNSound', :podspec => '../node_modules/react-native-sound/RNSound.podspec'
   pod 'react-native-video', :podspec => '../node_modules/react-native-video/react-native-video.podspec'
-  pod 'react-native-maps', :podspec => '../node_modules/react-native-maps/react-native-maps.podspec'
-  pod 'react-native-google-maps', :podspec => '../node_modules/react-native-maps/react-native-google-maps.podspec'
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
+  pod 'react-native-google-maps', :path => '../node_modules/react-native-maps'
   pod 'GoogleMaps'
   pod 'Google-Maps-iOS-Utils'
   pod 'RNSVG', :podspec => '../node_modules/react-native-svg/RNSVG.podspec'
@@ -65,6 +66,5 @@ target 'nativeTemplate' do
   pod 'RNFirebase', :path => '../node_modules/react-native-firebase/ios'
   pod 'Firebase/Core', '~> 5.15.0'
   pod 'Firebase/Messaging', '~> 5.15.0'
-  pod 'react-native-ble-plx-swift', :podspec => '../node_modules/react-native-ble-plx/react-native-ble-plx-swift.podspec'
 
 end
