--- a/android/build.gradle
+++ b/android/build.gradle
@@ -28,7 +28,7 @@ allprojects {
         mavenLocal()
         google()
         jcenter()
-        maven { url "https://jitpack.io" }
+        maven { url "https://www.jitpack.io" }
         maven {
             url "$rootDir/../node_modules/react-native/android"
         }
