Include CODE_PUSH_KEY environment variable

--- a/appcenter-build-config.json
+++ b/appcenter-build-config.json
@@ -3,7 +3,7 @@
     "trigger": "manual",
     "testEnabled": false,
     "signed": false,
-    "environmentVariables": [],
+    "environmentVariables": [{ "name": "CODE_PUSH_KEY", "value": "" }],
     "toolsets": {
       "xcode": {
         "xcodeVersion": "11.0",
@@ -29,7 +29,7 @@
     "trigger": "manual",
     "testEnabled": false,
     "signed": false,
-    "environmentVariables": [],
+    "environmentVariables": [{ "name": "CODE_PUSH_KEY", "value": "" }],
     "toolsets": {
       "android": {
         "module": "app",
