Disable dataBinding gradle option

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,7 +65,7 @@ android {
         }
     }
     dataBinding {
-        enabled true
+        enabled false
     }
     packagingOptions {
         pickFirst '**/libjsc.so'
