--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,6 +43,17 @@ android {
             include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
         }
     }
+    flavorDimensions "mode"
+    productFlavors {
+        appstore {
+            dimension "mode"
+        }
+        dev {
+            dimension "mode"
+            applicationIdSuffix ".developerapp"
+            versionNameSuffix "-developerApp"
+        }
+    }
     buildTypes {
         release {
             minifyEnabled enableProguardInReleaseBuilds
@@ -105,6 +116,8 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "org.webkit:android-jsc:r245459"
+    devImplementation "androidx.constraintlayout:constraintlayout:2.0.0-beta2"
+
 }
 
 // Run this once to be able to run the application with BUCK
