--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -117,7 +117,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "org.webkit:android-jsc:r245459"
     devImplementation "androidx.constraintlayout:constraintlayout:2.0.0-beta2"
-
+    devImplementation "me.dm7.barcodescanner:zxing:1.9.13"
 }
 
 // Run this once to be able to run the application with BUCK
