Rework to use MainActivity for both build types

--- a/android/app/src/dev/AndroidManifest.xml
+++ b/android/app/src/dev/AndroidManifest.xml
@@ -2,19 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:node="merge">
 
-    <application android:name="com.mendix.nativeteamplate.developerapp.DevApplication" tools:node="merge" tools:replace="android:name" >
-        <activity android:name="com.mendix.nativeteamplate.developerapp.DevMenuActivity" android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+    <application
+        android:name="com.mendix.nativetemplate.DevApplication"
+        tools:node="merge"
+        tools:replace="android:name">
         <activity
-            android:name="com.mendix.mendixnative.activity.MendixReactActivity">
-            <intent-filter tools:node="remove">
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:name="com.mendix.nativetemplate.MainActivity"
+            android:screenOrientation="portrait"
+            tools:node="merge"></activity>
+        <activity android:name="com.mendix.mendixnative.activity.MendixReactActivity"></activity>
     </application>
 </manifest>
