--- a/android/app/src/appstore/java/AndroidManifest.xml
+++ b/android/app/src/appstore/java/AndroidManifest.xml
@@ -1,18 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.mendix.nativetemplate">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.mendix.nativetemplate">
 
-    <application>
-      <activity
-        android:name="com.mendix.nativetemplate.MainActivity"
-        android:label="@string/app_name"
-        android:screenOrientation="portrait"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
-        android:windowSoftInputMode="adjustResize">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-      </activity>
-      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+    <application tools:node="merge">
+        <activity
+            android:name="com.mendix.nativetemplate.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
+            android:windowSoftInputMode="adjustResize">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
 </manifest>
