--- a/ios/Dev/Info.plist
+++ b/ios/Dev/Info.plist
@@ -20,8 +20,24 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>This app may need access to your Bluetooth connection</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>This app may need access to your Bluetooth connection</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>This app requires access to the calendar</string>
 	<key>NSCameraUsageDescription</key>
 	<string>The camera can be used to open apps by scanning a QR code.</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Enabling Face ID allows you quick and secure access to your account.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>To use that feature the app needs access to your location.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>To use that feature the app needs access to your location.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>To use that feature the app needs access to your microphone.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To use that feature the app needs access to your photo library.</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
