Reuse AppDelegate and LaunchScreen

--- a/ios/nativeTemplate/Info.plist
+++ b/ios/nativeTemplate/Info.plist
@@ -59,6 +59,8 @@
 	<string>To use that feature the app needs access to your photo library.</string>
 	<key>Runtime url</key>
 	<string>$(RUNTIME_URL)</string>
+	<key>TargetName</key>
+	<string>${TARGET_NAME}</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>glyphicons-halflings-regular.ttf</string>
