--- a/ios/Dev/Config/config.release.xcconfig
+++ b/ios/Dev/Config/config.release.xcconfig
@@ -1,3 +1,2 @@
-#include "Target Support Files/Pods-ReactNative-dev/Pods-ReactNative-dev.release.xcconfig"
-#include "../../NativeTemplate/Config/config.xcconfig"
+#include "Pods/Target Support Files/Pods-ReactNative-dev/Pods-ReactNative-dev.releasedevapp.xcconfig"
 #include "config.xcconfig"
