--- a/ios/Config/config.debug.xcconfig
+++ b/ios/Config/config.debug.xcconfig
@@ -1,3 +1,2 @@
+#include "Pods/Target Support Files/Pods-ReactNative-nativeTemplate/Pods-ReactNative-nativeTemplate.debug.xcconfig"
 #include "config.xcconfig"
-
-RUNTIME_URL = http:\/\/localhost:8080
