--- a/ios/Dev/Config/config.debug.xcconfig
+++ b/ios/Dev/Config/config.debug.xcconfig
@@ -1,3 +1,2 @@
-#include "Target Support Files/Pods-ReactNative-dev/Pods-ReactNative-dev.debug.xcconfig` in your build configuration (`Dev/Config/config.debug.xcconfig"
-#include "../../NativeTemplate/Config/config.xcconfig"
+#include "Pods/Target Support Files/Pods-ReactNative-dev/Pods-ReactNative-dev.debug.xcconfig"
 #include "config.xcconfig"
