Unify AppCenter build configuration

--- a/appcenter-build-config.json
+++ b/appcenter-build-config.json
@@ -3,7 +3,7 @@
     "trigger": "manual",
     "testEnabled": false,
     "signed": false,
-    "environmentVariables": [{ "name": "CODE_PUSH_KEY", "value": "" }],
+    "environmentVariables": [{ "name": "CODE_PUSH_KEY", "value": "" }, { "name": "IS_DEV_APP", "value": false }],
     "toolsets": {
       "xcode": {
         "xcodeVersion": "11.2.1",
@@ -25,68 +25,15 @@
       }
     }
   },
-  "iosDev": {
-    "trigger": "manual",
-    "testEnabled": false,
-    "signed": false,
-    "environmentVariables": [{ "name": "DEV_APP_KEY", "value": false }],
-    "toolsets": {
-      "xcode": {
-        "xcodeVersion": "11.2.1",
-        "automaticSigning": false,
-        "projectOrWorkspacePath": "ios/NativeTemplate.xcworkspace",
-        "podfilePath": "ios/Podfile",
-        "scheme": "Dev"
-      },
-      "javascript": {
-        "packageJsonPath": "package.json",
-        "runTests": false,
-        "nodeVersion": "10.x"
-      },
-      "buildscripts": {
-        "package.json": {
-          "postClone": "appcenter-post-clone.sh",
-          "preBuild": "appcenter-pre-build.sh"
-        }
-      }
-    }
-  },
   "android": {
     "trigger": "manual",
     "testEnabled": false,
     "signed": false,
-    "environmentVariables": [{ "name": "CODE_PUSH_KEY", "value": "" }],
+    "environmentVariables": [{ "name": "CODE_PUSH_KEY", "value": "" }, { "name": "IS_DEV_APP", "value": false }],
     "toolsets": {
       "android": {
         "module": "app",
         "buildVariant": "appstoreDebug",
-        "isRoot": false,
-        "runTests": false,
-        "runLint": false,
-        "automaticSigning": false,
-        "gradleWrapperPath": "android/gradlew"
-      },
-      "javascript": {
-        "packageJsonPath": "package.json",
-        "runTests": false,
-        "nodeVersion": "10.x"
-      },
-      "buildscripts": {
-        "package.json": {
-          "postClone": "appcenter-post-clone.sh",
-          "preBuild": "appcenter-pre-build.sh"
-        }
-      }
-    }
-  },
-  "androidDev": {
-    "trigger": "manual",
-    "testEnabled": false,
-    "signed": false,
-    "toolsets": {
-      "android": {
-        "module": "app",
-        "buildVariant": "devDebug",
         "isRoot": false,
         "runTests": false,
         "runLint": false,
