Use custom PRODUCT_BUNDLE_IDENTIFIER in build settings

--- a/ios/Config/config.xcconfig
+++ b/ios/Config/config.xcconfig
@@ -1,3 +1,5 @@
+PRODUCT_BUNDLE_IDENTIFIER = $(BUNDLE_IDENTIFIER)$(BUNDLE_IDENTIFIER_APPEND)
+
 BUNDLE_DISPLAY_NAME = NativeTemplate
 BUNDLE_IDENTIFIER = com.mendix.nativetemplate
 
