--- a/android/app/src/appstore/java/AndroidManifest.xml
+++ b/android/app/src/appstore/java/AndroidManifest.xml
@@ -2,9 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mendix.nativetemplate">
 
-    <application
-        android:name=".MainApplication"
-        tools:node="merge">
+    <application>
         <activity
             android:name="com.mendix.nativetemplate.MainActivity"
             android:label="@string/app_name"
