Include ObjectiveC MendixNative static library

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -66,6 +66,7 @@ abstract_target "ReactNative" do
   pod 'IQKeyboardManagerSwift'
   pod 'CodePush', :path => '../node_modules/react-native-code-push'
   pod 'react-native-fast-image', :path => '../node_modules/react-native-fast-image'
+  pod 'IQKeyboardManager'
 
   target 'nativeTemplate' do
     # Intentionally left empty
