--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,6 +34,8 @@ android {
         missingDimensionStrategy "react-native-camera", "general"
         versionCode 1
         versionName "1.0"
+        testBuildType System.getProperty("testBuildType", "debug")
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     splits {
         abi {
@@ -119,6 +121,14 @@ dependencies {
     implementation "org.webkit:android-jsc:r245459"
     devImplementation "androidx.constraintlayout:constraintlayout:2.0.0-beta2"
     devImplementation "me.dm7.barcodescanner:zxing:1.9.13"
+    androidTestImplementation("com.wix:detox:+") { transitive = true } 
+    androidTestImplementation "junit:junit:4.12"
+}
+
+configurations.all {
+    resolutionStrategy {
+        force "androidx.annotation:annotation:1.1.0"
+    }
 }
 
 // Run this once to be able to run the application with BUCK
