--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         compileSdkVersion = 28
         targetSdkVersion = 28
         supportLibVersion = "28.0.0"
+        kotlinVersion = "1.3.50"
         excludeAppGlideModule = true
     }
     repositories {
@@ -17,7 +18,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.4.0")
+        classpath "com.android.tools.build:gradle:3.4.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -38,6 +40,9 @@ allprojects {
         }
         maven {
             url "https://maven.fabric.io/public"
+        }
+        maven {
+            url "$rootDir/../node_modules/detox/Detox-android"
         }
     }
 }
