--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -19,6 +19,9 @@ def enableSeparateBuildPerCPUArchitecture = false
  */
 def enableProguardInReleaseBuilds = false
 
+/**
+ * Condition for including google services for firebase
+ */
 def googleServicesEnabled = hasGoogleServicesSupport()
 
 android {
@@ -107,17 +110,7 @@ dependencies {
     implementation project(":react-native-svg")
     implementation project(":react-native-sqlite-storage")
     implementation project(":react-native-sound")
-    if (googleServicesEnabled) {
-        implementation(project(":react-native-maps")) {
-            exclude group: 'com.google.android.gms', module: 'play-services-base'
-        }
-        implementation "com.google.android.gms:play-services-base:16.1.0"
-        implementation "com.google.firebase:firebase-core:16.0.9"
-        implementation "com.google.firebase:firebase-messaging:18.0.0"
-        implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
-    } else {
-        implementation project(":react-native-maps")
-    }
+    implementation project(":react-native-maps")
     implementation project(":react-native-inappbrowser-reborn")
     implementation project(":react-native-image-picker")
     implementation project(":react-native-geocoder")
@@ -132,6 +125,12 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "org.webkit:android-jsc:r245459"
+    if (googleServicesEnabled) {
+        implementation "com.google.android.gms:play-services-base:${project.playServicesVersion}"
+        implementation "com.google.firebase:firebase-core:16.0.9"
+        implementation "com.google.firebase:firebase-messaging:18.0.0"
+        implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
+    }
     devImplementation "androidx.constraintlayout:constraintlayout:2.0.0-beta2"
     devImplementation "me.dm7.barcodescanner:zxing:1.9.13"
     androidTestImplementation("com.wix:detox:+") { transitive = true } 
@@ -152,17 +151,9 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
-apply plugin: 'com.google.gms.google-services'
-com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
-
-if (!googleServicesEnabled) {
-    // Disable google-services-related plugins
-    tasks.whenTaskAdded { task ->
-        def name = task.name.toLowerCase()
-        if (name.contains("googleservices") || name.contains("fabric")) {
-            task.enabled = false
-        }
-    }
+if (googleServicesEnabled) {
+    apply plugin: "com.google.gms.google-services"
+    com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
 }
 
 boolean hasGoogleServicesSupport() {
