--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         supportLibVersion = "28.0.0"
         kotlinVersion = "1.3.50"
         excludeAppGlideModule = true
+        playServicesVersion = "16.1.0"
     }
     repositories {
         google()
