--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,9 +140,7 @@ dependencies {
     }
     devImplementation "androidx.constraintlayout:constraintlayout:2.0.0-beta2"
     devImplementation "me.dm7.barcodescanner:zxing:1.9.13"
-    androidTestImplementation("com.wix:detox:+") { transitive = true } 
-    androidTestImplementation "junit:junit:4.12"
-    
+    androidTestImplementation("com.wix:detox:+")
 }
 
 configurations.all {
