--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,6 +102,7 @@ dependencies {
     implementation project(':react-native-dark-mode')
     implementation project(':react-native-code-push')
     implementation project(":react-native-gesture-handler")
+    implementation project(":react-native-firebase")
     implementation project(":react-native-reanimated")
     implementation project(":react-native-webview")
     implementation project(":react-native-view-shot")
@@ -126,8 +127,6 @@ dependencies {
     implementation project(":@react-native-community_cameraroll")
     implementation project(":@react-native-community_masked-view")
     implementation project(":react-native-safe-area-context")
-    implementation project(":@react-native-firebase_app")
-    implementation project(":@react-native-firebase_messaging")
     implementation project(":mendixnative-release")
     implementation project(path: ':react-native-localize')
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -135,7 +134,9 @@ dependencies {
     implementation "org.webkit:android-jsc:r245459"
     if (googleServicesEnabled) {
         implementation "com.google.android.gms:play-services-base:${project.playServicesVersion}"
-        implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
+        implementation "com.google.firebase:firebase-core:17.2.3"
+        implementation "com.google.firebase:firebase-messaging:20.1.2"
+        implementation 'me.leolin:ShortcutBadger:1.1.22@aar'
     }
     devImplementation "androidx.constraintlayout:constraintlayout:2.0.0-beta2"
     devImplementation "me.dm7.barcodescanner:zxing:1.9.13"
