--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,6 +98,7 @@ project.ext.vectoricons = [
 ]
 
 dependencies {
+    implementation project(':react-native-reanimated')
     implementation project(':react-native-fast-image')
     implementation project(':react-native-dark-mode')
     implementation project(':react-native-code-push')
