--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-inappbrowser-reborn": "3.3.3",
     "react-native-localize": "1.3.3",
     "react-native-maps": "0.24.2",
+    "react-native-reanimated": "1.7.0",
     "react-native-sound": "0.10.12",
     "react-native-sqlite-storage": "3.3.10",
     "react-native-svg": "9.11.1",
