Add new art library as core art is deprecated
This library is used by the progress bar and progress circle widgets

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -127,6 +127,7 @@ dependencies {
     implementation project(":@react-native-community_cameraroll")
     implementation project(":@react-native-community_masked-view")
     implementation project(":react-native-safe-area-context")
+    implementation project(':@react-native-community_art')
     implementation project(":mendixnative-release")
     implementation project(path: ':react-native-localize')
     implementation fileTree(dir: "libs", include: ["*.jar"])
