--- a/ios/Podfile
+++ b/ios/Podfile
@@ -79,6 +79,7 @@ abstract_target "ReactNative" do
   pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
   pod 'RNCMaskedView', :path => '../node_modules/@react-native-community/masked-view'
   pod 'ReactNativeART', :path => '../node_modules/@react-native-community/art'
+  pod 'RNDateTimePicker', :path => '../node_modules/@react-native-community/datetimepicker'
 
   pod 'RNFirebase', :path => '../node_modules/react-native-firebase/ios'
   pod 'Firebase/Core', '~> 6.19.0'
