--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/art": "1.2.0",
     "@react-native-community/async-storage": "1.8.1",
     "@react-native-community/cameraroll": "1.4.0",
+    "@react-native-community/datetimepicker": "2.3.0",
     "@react-native-community/geolocation": "2.0.2",
     "@react-native-community/masked-view": "0.1.7",
     "@react-native-community/netinfo": "5.6.2",
